Adjust styles for Scientific Research page

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/page-with-ovals/page-with-ovals.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/page-with-ovals/page-with-ovals.component.html
@@ -50,5 +50,5 @@
             </div>
         </div>
     </section>
-    <div class="bottom-image"></div>
+    <div class="bottom-image" [class.about-us]="isAboutUsPage"></div>
 </main>
