--- a/ddp-workspace/projects/ddp-brugada/src/app/components/sign-in/sign-in.component.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/sign-in/sign-in.component.scss
@@ -4,15 +4,22 @@
 .actions {
   display: flex;
   margin-top: 32px;
-  align-items: center;
   margin-bottom: 20px;
   justify-content: space-between;
+  &-block {
+    max-width: 250px;
+    button {
+      margin-top: 5px;
+    }
+    &-sub {
+      margin-bottom: 20px;
+    }
+  }
 }
 
 @media only screen and (max-width: 425px) {
   .actions {
     display: block;
-    text-align: center;
     &-block {
       margin-top: 20px;
     }
