--- a/ddp-workspace/projects/ddp-brugada/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/header/header.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/breakpoints';
+@import '../../../styles/link-list';
 @import '../../../styles/colors';
 
 $headerHeight: (
@@ -90,28 +91,6 @@ $headerHeight: (
 
       &--shown {
         transform: translate3d(0, 0, 0);
-      }
-    }
-  }
-}
-
-.link-list {
-  display: flex;
-  align-items: center;
-
-  list-style: none;
-
-  @include media-md {
-    flex-flow: column nowrap;
-  }
-
-  &__item {
-    & + & {
-      margin-left: 2.8rem;
-
-      @include media-md {
-        margin-top: 1.6rem;
-        margin-left: 0;
       }
     }
   }
