DDP-6728 fix styles

--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -291,5 +291,6 @@ section {
         font-size: 1.5rem;
         padding: 1.5rem 2.3rem;
         line-height: 22px;
+        white-space: normal;
     }
 }
