DDP-6728 welcome page redesign (#777)
* DDP-6728 welcome page redesign

* DDP-6728 fix participant blocks styles

* DDP-6728 specify correct font-style for paragraph-text globally

* DDP-6728 fix styles

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -256,9 +256,10 @@ $tooltip-icon-size: 24px;
 }
 
 .participate-step-time {
-    font-size: 1rem;
+    font-size: 1.5rem;
     letter-spacing: -0.07px;
     line-height: 24px;
+    margin-top: 1rem;
 }
 
 // for Welcome page / Colorectal page mostly
@@ -290,9 +291,6 @@ section {
         font-size: 1.5rem;
         padding: 1.5rem 2.3rem;
         line-height: 22px;
-    }
-
-    .join-cmi-btn {
-        margin: 1.56rem 0 7.5rem;
+        white-space: normal;
     }
 }
