Fix after review

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/about-us/about-us.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/about-us/about-us.component.html
@@ -1,2 +1,2 @@
-<app-page-with-ovals source="App.AboutUs">
-</app-page-with-ovals>
+<app-page-with-sections source="App.AboutUs">
+</app-page-with-sections>
