--- a/ddp-workspace/projects/ddp-pancan/src/app/components/scientific-research/scientific-research.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/scientific-research/scientific-research.component.html
@@ -1,4 +1,4 @@
-<app-page-with-ovals
+<app-page-with-sections
     source="App.ScientificResearchPage"
     [linksMap]="linksMap">
-</app-page-with-ovals>
+</app-page-with-sections>
