--- a/ddp-workspace/projects/ddp-pancan/src/app/components/about-us/about-us.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/about-us/about-us.component.html
@@ -1,4 +1,2 @@
-<app-anchors-page
-    source="App.AboutUs"
-    [route]="route">
-</app-anchors-page>
+<app-page-with-sections source="App.AboutUs">
+</app-page-with-sections>
