--- a/ddp-workspace/projects/ddp-pancan/src/styles/static-page.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/static-page.scss
@@ -2,15 +2,15 @@
 
 .static-page-title {
     font-family: $primary-font-light;
-    font-size: 2.5rem;
-    font-weight: 600;
-    letter-spacing: -0.08px;
+    font-size: 3rem;
+    font-weight: 300;
+    letter-spacing: 0;
     line-height: 58px;
 }
 
 .static-page-paragraph-text {
     font-size: 1.25rem;
-    letter-spacing: -0.1px;
+    letter-spacing: 0;
     line-height: 36px;
 }
 
