DDP-6728 redesign colorectal page

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/join-cmi-section/join-cmi-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/join-cmi-section/join-cmi-section.component.html
@@ -8,7 +8,7 @@
     <a mat-raised-button
        [routerLink]="'/' + AppRoutes.CountMeIn"
        class="btn join-cmi-btn  button button_small"
-       color="primary">
+       [color]="isColorectalTheme ? 'colorectal' : 'primary'">
         {{btnText | translate}}
     </a>
 </div>
