--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -7,7 +7,7 @@
                 <a mat-flat-button
                    [routerLink]="'/' + AppRoutes.CountMeIn"
                    class="btn join-cmi-btn center button button_small"
-                   color="primary">
+                   color="colorectal">
                     {{'App.HomePage.JoinCountMeInButton' | translate}}
                 </a>
             </div>
@@ -39,14 +39,13 @@
     </section>
 
     <section class="participate">
-        <app-participation-section></app-participation-section>
+        <app-participation-section [isColorectalTheme]="true"></app-participation-section>
     </section>
 
     <section class="faq">
         <h2 class="title static-page-title" translate>App.FAQ.Title</h2>
         <div class="container">
-            <app-faq-section questions="App.ColorectalPage.FAQ.Questions" darkerBackground="true" [isColorectal]="true">
-            </app-faq-section>
+            <app-faq-section questions="App.ColorectalPage.FAQ.Questions" [isColorectal]="true"></app-faq-section>
         </div>
 
         <a mat-stroked-button
@@ -93,7 +92,10 @@
     </section>
 
     <section class="join-cmi">
-        <app-join-cmi-section title="App.ColorectalPage.CountMeInSection.Title"></app-join-cmi-section>
+        <app-join-cmi-section
+            title="App.ColorectalPage.CountMeInSection.Title"
+            [isColorectalTheme]="true">
+        </app-join-cmi-section>
     </section>
 </main>
 <app-splash-page-footer
