--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
@@ -5,10 +5,6 @@ section {
     padding-left: 3rem;
     padding-right: 3rem;
 
-    &:nth-of-type(even) {
-        background-color: $section-grey-background-color;
-    }
-
     &.introduction {
         padding: 5.125rem 5rem 1.5rem;
 
@@ -42,6 +38,7 @@ section {
     &.learn-more {
         padding-top: 4.56rem;
         padding-bottom: 3.875rem;
+        background-color: $accent-colorectal-color;
 
         .title, .text {
             max-width: 962px;
@@ -55,12 +52,14 @@ section {
     }
 
     &.participate {
+        background-color: $primary-colorectal-color;
+        color: white;
         padding-top: 5.18rem;
         padding-bottom: 3.75rem;
         text-align: left;
 
-        ::ng-deep .container:last-child {
-            text-align: center;
+        ::ng-deep .steps {
+            color: black;
         }
     }
 
@@ -83,7 +82,6 @@ section {
         margin: 0 auto;
         padding-top: 4.875rem;
         padding-bottom: 5.5rem;
-        text-align: left;
 
         .title {
             margin-top: 0;
@@ -111,6 +109,15 @@ section {
             max-width: 1062px;
         }
     }
+}
+
+.join-cmi-btn {
+    margin-top: 12px;
+}
+
+:host ::ng-deep .Link {
+    color: black;
+    text-decoration: underline;
 }
 
 @media screen and (max-width: $desktop-breakpoint) {
