--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -294,3 +294,8 @@ section {
         white-space: normal;
     }
 }
+
+.mat-colorectal {
+    background-color: $primary-colorectal-color !important;
+    color: #fff !important;
+}
