--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -18,6 +18,8 @@ $landing-page-container-width: 1260px;
 $text-color: #000000;
 $primary-color: #7154FF;
 $primary-colorectal-color: #0174CA;
+$primary-lms-color: #9953CE;
+$accent-lms-color: #C59CE4;
 $grey-text-color: #59585F;
 $grey-button-color: #a8a8a8;
 $section-grey-background-color: #F6F7FA;
