Hide common header for LMS page

--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -88,6 +88,10 @@ ddp-language-selector {
     padding-bottom: $footer-height;
     padding-top: $header-height;
     box-sizing: border-box;
+
+    &.lms-page {
+        padding-top: 0;
+    }
 }
 
 .Italic {
