--- a/ddp-workspace/projects/ddp-pancan/src/app/components/app/app.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper">
-    <app-header></app-header>
+<div class="wrapper" [class.lms-page]="isLmsPage">
+    <app-header *ngIf="!isLmsPage"></app-header>
     <router-outlet></router-outlet>
     <app-footer *ngIf="!isSplashPage"
                 [phone]="phone"
