Fix styles for mobiles

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/lms-page/lms-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/lms-page/lms-page.component.html
@@ -1,5 +1,5 @@
 <main>
-    <h2 class="main-title" translate>App.LmsPage.Title</h2>
+    <h2 class="main-title" [innerHTML]="'App.LmsPage.Title' | translate"></h2>
     <section class="introduction">
         <img src="assets/images/circles.svg" class="logo"
              [alt]="'App.ImageAlts.SplashPageLogo' | translate"
