DDP-6728 code review fixes

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/participation-section/participation-section.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/participation-section/participation-section.component.scss
@@ -6,7 +6,7 @@
     }
 
     .container {
-        max-width: $landing-page-container-width;
+        max-width: 1300px;
         margin: 0 auto;
 
         &.steps {
