--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
@@ -33,6 +33,11 @@ section {
         .logos {
             padding: 2rem 0 1rem;
         }
+
+        .text {
+            font-size: 1.25rem;
+            line-height: 30px;
+        }
     }
 
     &.learn-more {
@@ -48,6 +53,8 @@ section {
             text-align: left;
             margin-top: 2.5rem;
             margin-bottom: 2.5rem;
+            font-size: 1.25rem;
+            line-height: 30px;
         }
     }
 
@@ -89,7 +96,7 @@ section {
 
         .text {
             opacity: 1;
-            margin-bottom: 0;
+            margin: 5.5rem 0 0;
         }
 
         .logos {
@@ -115,9 +122,17 @@ section {
     margin-top: 12px;
 }
 
-:host ::ng-deep .Link {
-    color: black;
-    text-decoration: underline;
+:host ::ng-deep {
+    .Link {
+        color: black;
+        text-decoration: underline;
+        font-weight: bold;
+    }
+
+    .static-page-paragraph-text {
+        font-size: 1.5rem;
+        line-height: 36px;
+    }
 }
 
 @media screen and (max-width: $desktop-breakpoint) {
