DDP-5933 add forgot password

--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/login/login.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/login/login.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="showResetBar" class="reset-password">
+  If you have previously registered, please check your email to reset your password
+</div>
+
 <div class="wrapper">
   <div class="container">
     <h1>{{ 'Login.Title' | translate }}</h1>
