--- a/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
@@ -20,4 +20,5 @@ $colors: (
   'input-border-focus': #343434,
   'form-control-error': $__scarlet,
   'link': $__scarlet,
+  'reset-password-bar': #76d25f94,
 );
