--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/login/login.component.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/login/login.component.scss
@@ -1,3 +1,12 @@
+@import '../../../styles/colors';
+
+.reset-password {
+  background: map-get($colors, 'reset-password-bar');
+  width: 100%;
+  text-align: center;
+  padding: 10px 0;
+}
+
 .wrapper {
   background: #f6f6f6;
   padding-top: 40px;
