--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/lms-page/lms-page.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/lms-page/lms-page.component.scss
@@ -19,7 +19,8 @@ section {
     padding-right: 3rem;
 
     &.introduction {
-        padding: 4.375rem 0;
+        padding-top: 4.375rem;
+        padding-bottom: 4.375rem;
         background-color: #F8F8F8;
         max-width: unset;
 
