--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -9,10 +9,11 @@ $primary-font-light: Untitled-Sans-Light;
 $primary-font-medium: Untitled-Sans-Medium;
 
 // Other
-$header-height: 6rem;
+$header-height: 7.625rem;
 $footer-height: 14.94rem;
 $splash-page-footer-height: 18.19rem;
 $landing-page-container-width: 1260px;
+$static-page-header-height: 10rem;
 
 // Colors
 $text-color: #000000;
