--- a/ddp-workspace/projects/ddp-pancan/src/app/components/participation/participation.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/participation/participation.component.scss
@@ -4,21 +4,22 @@
     text-align: left;
 
     .title {
-        margin: 4.56rem auto 4.81rem auto;
+        margin: 0 auto 5.625rem;
         max-width: 1440px;
         text-align: center;
+        line-height: $static-page-header-height;
+        background-color: $accent-color-orange;
     }
 
     .step {
-        padding: 4.94rem 1.5rem 5rem 1.5rem;
+        padding: 0 1.5rem 9.94rem 1.5rem;
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-around;
         gap: 8rem;
 
         &:nth-of-type(odd) {
-            background-color: $section-grey-background-color;
-            padding-bottom: 3rem;
+            padding-bottom: 7.94rem;
             flex-direction: row;
         }
 
@@ -39,11 +40,17 @@
         }
 
         &__title {
-            margin: 0 0 1.13rem 0;
+            margin: 1rem 0 1.13rem 0;
+            font-family: $primary-font-medium;
+            font-size: 2rem;
+            line-height: 3.625rem;
+            font-weight: normal;
         }
 
         &__text {
-            margin-bottom: 2.13rem;
+            margin: 0.5rem 0 2.13rem;
+            font-size: 1.5rem;
+            line-height: 2.125rem;
         }
 
         &__btn {
