--- a/ddp-workspace/projects/ddp-pancan/src/app/components/faq/faq.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/faq/faq.component.scss
@@ -7,7 +7,7 @@
     .title {
         margin-top: 0;
         margin-bottom: 4rem;
-        line-height: $static-page-header-height;
+        padding: 3.2rem 0;
         background-color: $accent-color-green;
     }
 
