DDP-5933 add forgot password refactor

--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/forgot-password/forgot-password.component.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/forgot-password/forgot-password.component.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/colors';
 
 .content {
-  background: #f6f6f6;
+  background: map-get($colors, 'content-background');
   padding: 8rem 2.4rem 6.4rem;
   .container {
     max-width: 600px;
@@ -11,7 +11,7 @@
       margin-bottom: 15px;
     }
     p {
-      color: #201413;
+      color: map-get($colors, 'content-text');
       margin-bottom: 60px;
     }
   }
