--- a/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
@@ -21,4 +21,6 @@ $colors: (
   'form-control-error': $__scarlet,
   'link': $__scarlet,
   'reset-password-bar': #76d25f94,
+  'content-background': #f6f6f6,
+  'content-text': #201413,
 );
