--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/login/login.component.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/login/login.component.scss
@@ -8,7 +8,7 @@
 }
 
 .wrapper {
-  background: #f6f6f6;
+  background: map-get($colors, 'content-background');
   padding-top: 40px;
   padding-bottom: 75px;
   h1 {
@@ -16,7 +16,7 @@
     margin-bottom: 15px;
   }
   p {
-    color: #201413;
+    color: map-get($colors, 'content-text');
     margin-bottom: 60px;
   }
   .container {
