--- a/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.html
@@ -3,9 +3,15 @@
         <div class="content intro-block">
             <h1 class="intro-block__title semi-bold center" translate>HomePage.IntroSection.Title</h1>
             <p class="intro-block__text" translate>HomePage.IntroSection.Text</p>
-            <p translate>HomePage.IntroSection.Full</p>
+            <p translate>
+                HomePage.IntroSection.Full
+                <a class="header-link Link_semi-bold" routerLink="/" fragment="q&a" (click)="scrollToAnchor('q&a')" translate>
+                    HomePage.IntroSection.Link
+                </a>
+            </p>
         </div>
     </section>
+
     <section class="section results-section">
         <div id="results-dashboard" class="anchor"></div>
         <div class="content results-block">
@@ -17,26 +23,11 @@
                 <div class="columns-child-right">
                     <a class="button button_basic" [routerLink]="'/' + appRoutes.ResultsDashboard" translate>HomePage.ResultsSection.Button</a>
                 </div>
-                
+
             </div>
             <p class="results-block__text" translate>HomePage.ResultsSection.Text</p>
         </div>
     </section>
-    <section class="section about-section">
-        <div id="about-the-study" class="anchor"></div>
-        <div class="content about-block">
-            <h2 class="semi-bold" translate>HomePage.AboutSection.Title</h2>
-            <p class="about-block__text" translate>HomePage.AboutSection.Text</p>
-            <h3 translate>HomePage.AboutSection.Questions.Title</h3>
-            <ul class="about-list">
-                <li class="about-list__item" *ngFor="let item of 'HomePage.AboutSection.Questions.List' | translate">
-                    <span class="dot">&#8226;</span>
-                    <span translate>{{item}}</span>
-                </li>
-            </ul>
-        </div>
-    </section>
-
 
     <section class="section question-section">
         <div id="q&a" class="anchor"></div>
