--- a/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.scss
@@ -47,21 +47,24 @@
 
 .about-block {
     @include block-margin;
-    
+
 
     &__text {
         margin: 2.5rem 0;
     }
 }
+
 .results-section {
-    background-color: mat-color($app-theme, 3200);
+    background-color: mat-color($app-theme, 1400);
+    color: mat-color($app-theme, 700);
 }
+
 .results-block {
     @include block-margin;
     margin: 4rem auto 4rem auto;
 
     &__text {
-        margin: 0rem 0rem auto auto ;
+        margin: 0rem 0rem auto auto;
     }
 }
 
@@ -70,19 +73,18 @@
     grid-auto-flow: column;
     margin: 2rem auto 0rem auto;
 }
+
 .columns-child-left {
-    
     float: left;
     margin: auto;
 }
+
 .columns-child-right {
-    
     float: right;
     margin: auto;
 }
 
 .button_basic {
-    
     width: 225px;
     height: 75px;
     margin: auto auto auto 4rem;
@@ -258,5 +260,4 @@
             margin-left: 0;
         }
     }
-    
 }
