--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/join/join.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/join/join.component.html
@@ -1,5 +1,6 @@
 <div class="join">
   <div class="join__container">
+    <app-progress-bar></app-progress-bar>
     <app-activity
       [isPrequal]="true"
       [activityGuid]="prequalInstanceGuid"
