--- a/ddp-workspace/projects/ddp-brugada/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/activity/activity.component.html
@@ -131,6 +131,60 @@
           ></button>
         </ng-container>
 
+        <ng-container *ngSwitchCase="ActivityCode.Consent">
+          <button
+            *ngIf="!isFirstStep"
+            class="btn btn--scarlet pull-left"
+            [disabled]="(isPageBusy | async) || dataEntryDisabled"
+            [innerHTML]="'SDK.PreviousButton' | translate"
+            (click)="decrementStep()"
+          ></button>
+
+          <button
+            *ngIf="!isLastStep"
+            class="btn btn--scarlet pull-right"
+            [disabled]="(isPageBusy | async) || dataEntryDisabled"
+            [innerHTML]="
+              (isPageBusy | async)
+                ? ('SDK.SavingButton' | translate)
+                : ('SDK.NextButton' | translate)
+            "
+            (click)="incrementStep()"
+          ></button>
+
+          <ng-container *ngIf="isLastStep">
+            <button
+              *ngIf="!isReadonly()"
+              type="button"
+              class="btn btn--white btn--not-agree"
+              [disabled]="(isPageBusy | async) || dataEntryDisabled"
+              (click)="close()"
+            >
+              <mat-icon>cancel</mat-icon>
+              {{ 'SDK.NotAgreeButton' | translate }}
+            </button>
+
+            <button
+              #submitButton
+              *ngIf="!isReadonly() && !isAgree()"
+              class="btn btn--scarlet btn--agree"
+              [disabled]="(isPageBusy | async) || dataEntryDisabled"
+              (click)="flush()"
+              (mouseenter)="mouseEnterOnSubmit()"
+            >
+              <mat-icon>check_circle</mat-icon>
+              {{ 'SDK.AgreeButton' | translate }}
+            </button>
+
+            <button
+              *ngIf="isReadonly()"
+              class="btn btn--scarlet"
+              [innerHTML]="'SDK.CloseButton' | translate"
+              (click)="close()"
+            ></button>
+          </ng-container>
+        </ng-container>
+
         <ng-container *ngSwitchDefault>
           <ng-container *ngIf="isStepped">
             <button
@@ -174,7 +228,7 @@
 
             <button
               *ngIf="isReadonly()"
-              class="btn btn--white"
+              class="btn btn--scarlet"
               [innerHTML]="'SDK.CloseButton' | translate"
               (click)="close()"
             ></button>
