--- a/ddp-workspace/projects/ddp-brugada/src/app/components/activity/activity.component.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/activity/activity.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/breakpoints';
+@import '../../../styles/colors';
 
 .activity {
   &__title {
@@ -26,8 +27,17 @@
 
 .section--buttons {
   display: flex;
+  align-items: flex-start;
+  flex-flow: row wrap;
 
-  margin: 1em 0;
+  margin: 1.5em 0;
+  padding-top: 1.5em;
+
+  border-top: 1px solid map-get($colors, 'light-grey');
+
+  @include media-sm {
+    flex-flow: column nowrap;
+  }
 }
 
 .section--error {
@@ -35,7 +45,37 @@
 }
 
 .btn {
-  padding: 1.2rem 4.2rem;
+  display: inline-flex;
+  align-items: center;
+
+  padding: 1.2rem 3.6rem;
+
+  @include media-sm {
+    width: 100%;
+
+    justify-content: center;
+
+    & + & {
+      margin-top: 1.2rem;
+    }
+  }
+
+  &--agree {
+    margin-left: 1.2rem;
+
+    @include media-sm {
+      margin-left: 0;
+    }
+  }
+
+  .mat-icon {
+    width: 2rem;
+    height: 2rem;
+
+    margin-right: 0.8rem;
+
+    font-size: 2rem;
+  }
 }
 
 .pull-left {
