--- a/ddp-workspace/projects/ddp-brugada/src/styles/_activities.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_activities.scss
@@ -1,13 +1,32 @@
 @import 'colors';
 @import 'breakpoints';
 
-.activity-question-title {
+.activity-block-title {
+  margin: 1.65em 0 0.5em;
+
+  font-size: 2.8rem;
+
+  @include media-sm {
+    font-size: 2.4rem;
+  }
+}
+
+.activity-question-title,
+.activity-text-title {
   margin: 1.65em 0 0.25em;
 
   font-size: 2.4rem;
 
   @include media-sm {
     font-size: 2rem;
+  }
+}
+
+.bullet-list {
+  padding-left: 1.25em;
+
+  li {
+    margin: 0.5em 0;
   }
 }
 
