--- a/ddp-workspace/projects/ddp-brugada/src/styles/_sign-forms.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_sign-forms.scss
@@ -13,6 +13,7 @@
       width: 100%;
       padding: 22px 20px;
       border-radius: 3px;
+      font-family: inherit;
       font-size: 20px;
       border: 2px solid map-get($colors, 'input-border');
       &:focus, &:focus-visible {
