Fix after review

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/lms-page/lms-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/lms-page/lms-page.component.html
@@ -9,7 +9,7 @@
             <p class="text static-page-paragraph-text" translate>App.LmsPage.IntroductionSection.Text</p>
             <p class="notify-text" translate>App.LmsPage.IntroductionSection.Notify</p>
             <button mat-flat-button
-                    (click)="notify()"
+                    (click)="openJoinMailingList()"
                     color="lms"
                     class="notify-btn center">
                 {{'App.LmsPage.IntroductionSection.Button' | translate}}
