DDP-5944 progress bar styles

--- a/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.html
@@ -4,19 +4,31 @@
     <div class="circular circular_active">
       <p class="number">1</p>
     </div>
-    <p class="step-paragraph">text</p>
+    <p class="step-paragraph">{{ 'ProgressBar.ConsentForm' | translate }}</p>
   </div>
-  <div class="circular">
-    <p class="number">2</p>
+  <div class="step-container">
+    <div class="circular">
+      <p class="number">2</p>
+    </div>
+    <p class="step-paragraph">{{ 'ProgressBar.MedRelease' | translate }}</p>
   </div>
-  <div class="circular">
-    <p class="number">3</p>
+  <div class="step-container">
+    <div class="circular">
+      <p class="number">3</p>
+    </div>
+    <p class="step-paragraph">{{ 'ProgressBar.BackgroundSurvey' | translate }}</p>
   </div>
-  <div class="circular">
-    <p class="number">4</p>
+  <div class="step-container">
+    <div class="circular">
+      <p class="number">4</p>
+    </div>
+    <p class="step-paragraph">{{ 'ProgressBar.GenFamHistorySurvey' | translate }}</p>
   </div>
-  <div class="circular">
-    <p class="number">5</p>
+  <div class="step-container">
+    <div class="circular">
+      <p class="number">5</p>
+    </div>
+    <p class="step-paragraph">{{ 'ProgressBar.AddSurveys' | translate }}</p>
   </div>
 </div>
 
