--- a/ddp-workspace/projects/ddp-pancan/src/app/components/app/app.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/app/app.component.html
@@ -1,5 +1,7 @@
-<div class="wrapper">
-    <app-header [isColorectalTheme]="isColorectalPage"></app-header>
+<div class="wrapper" [class.lms-page]="isLmsPage">
+    <app-header *ngIf="!isLmsPage"
+        [isColorectalTheme]="isColorectalPage">
+    </app-header>
     <router-outlet></router-outlet>
     <app-footer *ngIf="!isSplashPage"
                 [phone]="phone"
