--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -19,6 +19,8 @@ $text-color: #000000;
 $primary-color: #7154FF;
 $primary-colorectal-color: #0174CA;
 $accent-colorectal-color: #ACE1FF;
+$primary-lms-color: #9953CE;
+$accent-lms-color: #C59CE4;
 $grey-text-color: #59585F;
 $grey-button-color: #a8a8a8;
 $section-grey-background-color: #F6F7FA;
