Fix participation step cards css for mobiles

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/participation-section/participation-section.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/participation-section/participation-section.component.scss
@@ -125,3 +125,10 @@
     }
 }
 
+@media screen and (max-width: $mobile-breakpoint) {
+    .container.steps {
+        .step {
+            min-width: unset;
+        }
+    }
+}
