--- a/ddp-workspace/projects/ddp-brugada/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_buttons.scss
@@ -103,3 +103,44 @@
     opacity: 0.75;
   }
 }
+
+.button_new-item {
+  display: inline-block;
+
+  margin: 1em 0;
+  padding: 1.2rem 2.4rem;
+
+  border: none;
+  border-radius: 100px;
+
+  font-family: 'PT Sans', 'sans-serif';
+  font-weight: bold;
+  font-style: normal;
+  font-size: 1.8rem;
+  line-height: 1;
+  text-decoration: none;
+  color: map-get($colors, 'white');
+
+  background: map-get($colors, 'scarlet');
+
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  outline: none;
+
+  &:disabled {
+    opacity: 0.8;
+
+    cursor: not-allowed;
+  }
+
+  &:not(:disabled) {
+    &:focus,
+    &:hover {
+      background: map-get($colors, 'scarlet:hover');
+    }
+
+    &:active {
+      background: map-get($colors, 'scarlet:active');
+    }
+  }
+}
