--- a/ddp-workspace/projects/ddp-brugada/src/styles.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles.scss
@@ -4,3 +4,8 @@ a {
   text-decoration: none;
   color: map-get($colors, 'font-dark');
 }
+
+.session-expire-dialog button {
+  margin-left: 30px;
+  margin-bottom: 20px;
+}
