--- a/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.html
@@ -1,36 +1,21 @@
 <div class="wrapper">
   <div class="bottom-line"></div>
-  <div class="step-container step-container_active">
-    <div class="circular circular_active">
-      <p class="number">1</p>
+  <div
+    [class.step-container_active]="i <= activeActivityNumber"
+    *ngFor="let activity of activities; index as i"
+    class="step-container"
+  >
+    <div
+      [class.circular_active]="i <= activeActivityNumber"
+      class="circular"
+    >
+      <p class="number">{{ i + 1 }}</p>
     </div>
-    <p class="step-paragraph">{{ 'ProgressBar.ConsentForm' | translate }}</p>
-  </div>
-  <div class="step-container">
-    <div class="circular">
-      <p class="number">2</p>
-    </div>
-    <p class="step-paragraph">{{ 'ProgressBar.MedRelease' | translate }}</p>
-  </div>
-  <div class="step-container">
-    <div class="circular">
-      <p class="number">3</p>
-    </div>
-    <p class="step-paragraph">{{ 'ProgressBar.BackgroundSurvey' | translate }}</p>
-  </div>
-  <div class="step-container">
-    <div class="circular">
-      <p class="number">4</p>
-    </div>
-    <p class="step-paragraph">{{ 'ProgressBar.GenFamHistorySurvey' | translate }}</p>
-  </div>
-  <div class="step-container">
-    <div class="circular">
-      <p class="number">5</p>
-    </div>
-    <p class="step-paragraph">{{ 'ProgressBar.AddSurveys' | translate }}</p>
+    <p class="step-paragraph">{{ activity.title }}</p>
   </div>
 </div>
+
+
 
 
 
