DDP-5944 progress bar

--- a/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.html
@@ -11,10 +11,9 @@
     >
       <p class="number">{{ i + 1 }}</p>
     </div>
-    <p class="step-paragraph">{{ activity.title }}</p>
+    <p class="step-paragraph">{{ activity.activityName }}</p>
   </div>
 </div>
-
 
 
 
