--- a/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
@@ -15,7 +15,7 @@ $colors: (
   'teal:hover': darken($__teal, 3%),
   'teal:active': darken($__teal, 7%),
   'dark-grey': #49505a,
-  'grey': #808080,
+  'progress-bar-border-grey': #808080,
   'light-grey': #e3e3e3,
   'white': $__white,
   'white:hover': darken($__white, 8%),
